<resources>
    <string name="app_name">Knowlounge</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="chooser_title">File Browser</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_hand">Hand</string>
    <string name="menu_zoomout">Zoom out</string>
    <string name="menu_zoomin">Zoom in</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_img_upload">upload</string>
    <string name="menu_download">download</string>
    <string name="menu_history">history</string>
    <string name="menu_members">Members</string>
    <string name="menu_config">Config</string>
    <string name="tab_user_list">참여자 리스트</string>
    <string name="tab_config">환경설정</string>
    <string name="color_1">#00c8fa</string>
    <string name="color_2">#00c8fa</string>
    <string name="color_3">#00c8fa</string>
    <string name="color_4">#fa6464</string>
    <string name="color_5">#c800fa</string>
    <string name="color_6">#0064fa</string>
    <string name="color_7">#00fa64</string>
    <string name="color_8">#fa6400</string>
    <string name="color_9">#fa3232</string>
    <string name="color_10">#6400fa</string>
    <string name="color_11">#323232</string>
    <string name="gcm_sender_id_0">790030787971</string>
    <string name="gcm_sender_id_1">790030787971</string>
    <string name="gcm_sender_id_2">544848250470</string>
    <string name="svr_flag">1</string>
    <string name="svr_host_0">http://192.168.0.195/</string>
    <string name="svr_host_1">https://dev.knowlounges.com/</string>
    <string name="svr_host_2">https://www.knowlounges.com/</string>
    <string name="zico_svr_host_1">https://zico.knowlounges.com/</string>
    <string name="zico_svr_host_2">https://zico.knowlounges.com/</string>
    <string name="premium_svr_host_1">http://edudev.knowlounges.com/mobile/</string>
    <string name="premium_svr_host_2">https://edu.knowlounges.com/mobile/</string>
    <string name="svr_context">mapi/</string>
    <string name="facebook_app_id_for_test">1521132541531590</string>
    <string name="facebook_app_id_dev">1241095575920042</string>
    <string name="facebook_app_id_release">257864911219123</string>
    <string name="api_facebook_auth">fb/auth.json</string>
    <string name="api_google_auth">gl/auth.json</string>
    <string name="api_signout">auth/signout.json</string>
    <string name="api_create_room">canvas/add.json</string>
    <string name="share_uri">https://www.knowlounges.com/fb/room/</string>
    <string name="answer_remain">Remaining Time : %1$s sec </string>
    <string name="answer_response">Answer</string>
    <string name="answer_response_title">Start answer</string>
    <string name="canvas_authority">Presenter : %1$s </string>
    <string name="canvas_authority_button">You are able to obtain class control</string>
    <string name="canvas_authority_give">Would you like to let this user host the class?</string>
    <string name="canvas_authority_no">You have no class control</string>
    <string name="canvas_authority_take">Do you want to take over class control?</string>
    <string name="canvas_bookmark">Bookmark</string>
    <string name="canvas_bubble_boardnavi">Note your ideas on your board while listening to teacher\'s lessons.\nYou can also do group activity with friends!</string>
    <string name="canvas_bubble_classcode">Is it a fun and useful class?\nCopy your class code and learn together with your friends!</string>
    <string name="canvas_bubble_toolbar">Take turn to write and question each other!\nYour class will be more fun!</string>
    <string name="canvas_cam">Cam Video</string>
    <string name="canvas_cam_disconnect">Video Cam is not connected.</string>
    <string name="canvas_cam_invite">Invite a friend!</string>
    <string name="canvas_chat">Chat</string>
    <string name="canvas_chat_all">Everyone</string>
    <string name="canvas_chat_guide">Leave a comment</string>
    <string name="canvas_chat_send">Send</string>
    <string name="canvas_chat_whisper">From %1$s :</string>
    <string name="canvas_close">Close</string>
    <string name="canvas_cloud">Cloud</string>
    <string name="canvas_code">Class Code</string>
    <string name="canvas_comment">Comments</string>
    <string name="canvas_comment_delete">Do you want to delete this comment?</string>
    <string name="canvas_communication">Communication</string>
    <string name="canvas_delete_all">Are you sure you want to delete\nall drawing, shapes and text?</string>
    <string name="canvas_deleteall">Delete all drawing</string>
    <string name="canvas_drawing">Drawing</string>
    <string name="canvas_edittitle_guide">Enter the title you want to change.</string>
    <string name="canvas_edittitle_hint">Enter the class title.</string>
    <string name="canvas_eraser">Eraser</string>
    <string name="canvas_exit">Leave</string>
    <string name="canvas_exit_body1">Do you want to leave or close the class?\nIf you close the class, it will be deleted.</string>
    <string name="canvas_exit_body2">Do you want to leave the class?</string>
    <string name="canvas_figure">Shape</string>
    <string name="canvas_hand">Select tool</string>
    <string name="canvas_image">Image</string>
    <string name="canvas_image_delete">Do you want to delete this image?</string>
    <string name="canvas_import">Download board</string>
    <string name="canvas_inform">Class information</string>
    <string name="canvas_loading">Loading my previous works</string>
    <string name="canvas_loading_cancel">Back to main</string>
    <string name="canvas_memo">Add a memo</string>
    <string name="canvas_memo_delete">Do you want to delete this memo?</string>
    <string name="canvas_navi_master">Go to teacher\'s board</string>
    <string name="canvas_navi_sub">Go to my board</string>
    <string name="canvas_noti">Notifications</string>
    <string name="canvas_noti_apply">Join Requests</string>
    <string name="canvas_noti_approve">Limited Removed</string>
    <string name="canvas_noti_call">%1$s teacher is calling you!</string>
    <string name="canvas_noti_holdback">Wait, I\'ll be right there!</string>
    <string name="canvas_noti_invite">Invite Notifications</string>
    <string name="canvas_noti_movenow">Move on now</string>
    <string name="canvas_noti_noapply">No requests to join this class.</string>
    <string name="canvas_noti_noinvite">No invitations have been sent.</string>
    <string name="canvas_participant_30">30 people</string>
    <string name="canvas_participant_25">%1$s people</string>
    <string name="canvas_participant_3">3 people</string>
    <string name="canvas_pdf">Insert PDF</string>
    <string name="canvas_pdf_delete">Do you want to delete this pdf file?</string>
    <string name="canvas_pen">Pen</string>
    <string name="canvas_pointer">Pointer</string>
    <string name="canvas_poll">Create poll/quiz</string>
    <string name="canvas_poll_list">Saved poll/quiz</string>
    <string name="canvas_poll_noresult">No Q&amp;A had been finished.</string>
    <string name="canvas_poll_nosaved">No saved questions.</string>
    <string name="canvas_poll_result">Previous results</string>
    <string name="canvas_popup_kick">Are you sure you want to kick this user? (%1$s)</string>
    <string name="canvas_presentation">Presentation</string>
    <string name="canvas_redo">Redo</string>
    <string name="canvas_setting_background">Change Background</string>
    <string name="canvas_setting_chat">Enable chat</string>
    <string name="canvas_setting_class">Class Settings</string>
    <string name="canvas_setting_classtitle">Class title</string>
    <string name="canvas_setting_comment">Enable comments</string>
    <string name="canvas_setting_control">Control Settings</string>
    <string name="canvas_setting_coop">Enable co-hosting</string>
    <string name="canvas_setting_descrpt">Class description</string>
    <string name="canvas_setting_descrptedit">Describe about the class.</string>
    <string name="canvas_setting_descrptguide">Enter Class description</string>
    <string name="canvas_setting_import">Enable import</string>
    <string name="canvas_setting_number">Class users</string>
    <string name="canvas_setting_password">Set password</string>
    <string name="canvas_share">Share</string>
    <string name="canvas_sharetools">Sharing tools</string>
    <string name="canvas_textbox">Insert text</string>
    <string name="canvas_text">Text</string>
    <string name="canvas_title">Title</string>
    <string name="canvas_title_default">%1$s\'s class</string>
    <string name="canvas_undo">Undo</string>
    <string name="canvas_urlcopy">URL Copy</string>
    <string name="canvas_urlcopy_guide">Copy the class address to clipboard and share!</string>
    <string name="canvas_userlist">Users</string>
    <string name="canvas_zoomin">Zoom in</string>
    <string name="canvas_zoomout">Zoom out</string>
    <string name="confirm_delbookmark">Do you want to delete bookmark?</string>
    <string name="confirm_setprofile">You did not set profile.\nDo you want to set the profile now?</string>
    <string name="confirm_signout">Are you sure to sign out?</string>
    <string name="giveaway_star_guide">Select Star amount for gift.</string>
    <string name="giveaway_star_hold">My Star : </string>
    <string name="giveaway_star_list">Select amount for gift</string>
    <string name="giveaway_star_title">Select Amount</string>
    <string name="giveaway_user_list">Friends</string>
    <string name="giveaway_user_search">Search by name</string>
    <string name="giveaway_user_select">Select Recipient</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_complete">Complete</string>
    <string name="global_delete">Delete</string>
    <string name="global_edit">Edit</string>
    <string name="global_exit">Exit</string>
    <string name="result_close">Close</string>
    <string name="global_friend">Friends List</string>
    <string name="global_join_btn">Join Class</string>
    <string name="global_member_yet">Are you not a member yet?</string>
    <string name="global_new">Create a class</string>
    <string name="global_ok">OK</string>
    <string name="global_popup_apply">Apply for participation</string>
    <string name="global_popup_attend">Remove the limit</string>
    <string name="global_popup_classfull">You can create up to 100 classes.</string>
    <string name="global_popup_password">This is a private class.\nPlease enter the password.</string>
    <string name="global_popup_title">Knowlounge Notification</string>
    <string name="login_join_code">Enter class code</string>
    <string name="login_join_title">Join by Class code</string>
    <string name="noti_delete">Delete</string>
    <string name="noti_null">No notifications.</string>
    <string name="noti_selectall">Select all</string>
    <string name="noti_title">Notifications</string>
    <string name="toast_import_start">Save a screenshot.</string>
    <string name="canvas_history2">This may take a while.</string>
    <string name="popup_enterpw_placeholder">Enter the password.</string>
    <string name="cam_invite_alert">A user would like to share their webcam with the class!</string>
    <string name="disagree_btn">Add</string>
    <string name="agree_btn">Refuse</string>
</resources>