<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@drawable/bg_rounded_corner"
    android:layout_gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/global_popup_title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#3c3c3c"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/app_base_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_join_title"
            android:textSize="13dp"
            android:textColor="#FF505050"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/dialog_input_direct_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_rounded_corner"
            android:hint="@string/login_join_code"
            android:inputType="number"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:textColorHint="#B4B4B4"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_direct_enter_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_big_green_rounded"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/global_ok" />

    </LinearLayout>


</LinearLayout>