<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">
    <!--Title 부분-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/btn_notice_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:text="@string/global_edit"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:textColor="@color/app_base_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/noti_title"
            android:textColor="#3c3c3c"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/btn_notice_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="30dp"
            android:text="@string/global_cancel"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:textColor="@color/app_base_color"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/app_base_color"/>

    <!--선택삭제 부분-->
    <LinearLayout
        android:id="@+id/notice_edit_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/notice_selected_all"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/btn_checkbox"/>
            <TextView
                android:id="@+id/notice_selected_all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti_selectall"
                android:textSize="15dp"
                android:textColor="#969696"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/selected_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti_delete"
                android:textSize="15dp"
                android:textColor="@color/app_base_color"
                android:layout_marginRight="20dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebeced"/>
    </LinearLayout>

    <!-- 알림 내용 부분 -->
    <ListView
        android:id="@+id/notice_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:visibility="gone">
    </ListView>

    <!--알림 빈 화면 부분-->
    <LinearLayout
        android:id="@+id/no_data_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">
        <ImageView
            android:id="@+id/not_noti"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="40dp"
            android:src="@drawable/main_not_noti"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/not_noti"
            android:text="@string/noti_null"
            android:layout_centerHorizontal="true"
            android:maxWidth="280dp"
            android:textSize="16dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>