<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@drawable/bg_rounded_corner"
    android:layout_gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/global_popup_title"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#3c3c3c"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/app_base_color"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center"
            android:textSize="13dp"
            android:textColor="#3c3c3c"/>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dedfe0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/global_cancel"
            android:textColor="#ffffffff"
            android:background="@drawable/btn_big_green_rounded"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/global_ok"
            android:textColor="#ffffffff"
            android:background="@drawable/btn_big_green_rounded"/>
    </LinearLayout>

</LinearLayout>